--- a/src/app.html
+++ b/src/app.html
@@ -25,6 +25,8 @@
       }
     </script>
 
+    <script defer data-domain="noams.blog" src="https://plausible.io/js/script.js"></script>
+
     %sveltekit.head%
   </head>
   <body data-sveltekit-preload-data="hover" class="bg-background font-primary text-foreground antialiased">
