--- a/src/app.html
+++ b/src/app.html
@@ -19,7 +19,7 @@
 
     %sveltekit.head%
   </head>
-  <body data-sveltekit-preload-data="hover" class="min-h-screen bg-background font-primary text-foreground antialiased">
+  <body data-sveltekit-preload-data="hover">
     <div style="display: contents">%sveltekit.body%</div>
   </body>
 </html>
